# uPDE

./: 2D rotating flow with advection diffusion of tracer scalar.ipynb  README.md  pde_solver_2d.py  pyproject.toml  pytest.ini  upde.py
docs/: index.html
examples/: 01_heat_equation.ipynb  02_advection_diffusion.ipynb  03_burgers.ipynb  04_conservation_law.ipynb  05_reaction_diffusion.ipynb  06_wave_equation.ipynb  07_gray_scott.ipynb  08_navier_stokes.ipynb  10_mixture_fraction_1d.ipynb  11_mixture_fraction_2d.ipynb  potential_of_U.ipynb  ss01_steady_heat_1d.ipynb  ss02_steady_heat_2d.ipynb  ss03_steady_reaction_diffusion.ipynb
tests/: README.md  conftest.py  test_core.py  test_physics.py  test_reg_steady_additions.py  test_regression.py  test_set_bc.py  test_steady_physics.py
tests/snapshots/: reg_advection_1d.npz  reg_burgers.npz  reg_coupled_1d.npz  reg_diffusion_1d.npz  reg_diffusion_2d.npz  reg_flamelet_bs.npz  reg_mixture_fraction_1d.npz  reg_mixture_fraction_1d_advection.npz  reg_source_1d.npz  reg_steady_1d_linear.npz  reg_steady_1d_nonlinear.npz  reg_steady_2d_laplace.npz  reg_steady_coupled.npz  reg_time_advection_1d.npz  reg_time_source_1d.npz  reg_wave.npz
upde/: __init__.py  chemistry.py  equations.py  upde.py
webapp/: upde-builder.html
